<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MyPageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_call"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/call"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/mobile"
            android:textColor="@color/black"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_call"
            app:layout_constraintTop_toTopOf="@+id/iv_call" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_data"
            app:layout_constraintLeft_toLeftOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_email"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/message"
            app:layout_constraintStart_toStartOf="@+id/iv_call"
            app:layout_constraintTop_toBottomOf="@+id/iv_call" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintLeft_toRightOf="@id/iv_email"
            app:layout_constraintTop_toTopOf="@id/iv_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_data"
            app:layout_constraintLeft_toLeftOf="@id/tv2"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_notification"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/noti"
            app:layout_constraintStart_toStartOf="@+id/iv_email"
            app:layout_constraintTop_toBottomOf="@+id/iv_email" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="20sp"

            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_notification"
            app:layout_constraintTop_toTopOf="@id/iv_notification" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_data"
            app:layout_constraintLeft_toLeftOf="@id/tv3"
            app:layout_constraintTop_toBottomOf="@id/tv3" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>