<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_edit_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/test"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:id="@+id/ib_edit_img"
            android:scaleType="center"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/add_photo" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />
    <EditText
        android:id="@+id/et_edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_name" />

    <EditText
        android:id="@+id/et_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_phone_number" />


</androidx.constraintlayout.widget.ConstraintLayout>