<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24"/>

            <Button
                android:id="@+id/editBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/unclicked_bookmark"
                android:clickable="true"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name"
                app:layout_constraintStart_toEndOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:fontFamily="@font/komi"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="80dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_call"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/call"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/komi"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_call"
                app:layout_constraintTop_toTopOf="@+id/iv_call" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_data"
                android:fontFamily="@font/komi"
                app:layout_constraintLeft_toLeftOf="@id/tv1"
                app:layout_constraintTop_toBottomOf="@id/tv1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_email"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/message"
                app:layout_constraintStart_toStartOf="@+id/iv_call"
                app:layout_constraintTop_toBottomOf="@+id/iv_call" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/komi"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/iv_email"
                app:layout_constraintTop_toTopOf="@id/iv_email" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_data"
                android:fontFamily="@font/komi"
                app:layout_constraintLeft_toLeftOf="@id/tv2"
                app:layout_constraintTop_toBottomOf="@id/tv2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_notification"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/noti"
                app:layout_constraintStart_toStartOf="@+id/iv_email"
                app:layout_constraintTop_toBottomOf="@+id/iv_email" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/komi"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/iv_notification"
                app:layout_constraintTop_toTopOf="@id/iv_notification" />

            <TextView
                android:id="@+id/tv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_data"
                android:fontFamily="@font/komi"
                app:layout_constraintLeft_toLeftOf="@id/tv3"
                app:layout_constraintTop_toBottomOf="@id/tv3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/iv_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_message_pressed"
        app:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@null"
        android:backgroundTint="@color/green"
        android:scaleType="centerCrop"
        app:backgroundTint="@color/transparent"
        android:src="@drawable/btn_call_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


